added new endpoint attachment and added attachment to swagger
